# SolarSystem3DV

./: .clang-format  .gitignore  CMakeLists.txt  README.md  data_types.h  helper_utilities.h  main.cpp
models/: urls
shaders/: shader.frag  shader.vert
src/: main.cpp
src/engine/: sol_engine.cpp  sol_engine.h  sol_images.cpp  sol_images.h  sol_initializers.cpp  sol_initializers.h  sol_types.h
